# RL-Market-Making

./: .gitignore  README.md  analysis.ipynb  analysis.py  market_making.ipynb  pyproject.toml  script.ipynb  tmp.py
data/: script.py
environment/: __init__.py  env.py
model/: QLearning(alpha=0.03432157463336464_gamma=0.99_disc_alpha=0.9999)_2024-06-22-15-36-03.npy  QLearning(alpha=0.034441916637433755_gamma=0.99_disc_alpha=0.9999)_2024-06-23-14-47-08.npy  QLearning(alpha=0.03478460224142983_gamma=0.99_disc_alpha=0.9999)_2024-06-23-12-18-16.npy  QLearning(alpha=0.03488562905743168_gamma=0.99_disc_alpha=0.9999)_2024-06-23-16-55-49.npy  SARSA(alpha=0.03582608644261413_gamma=0.99_disc_alpha=0.9999)_2024-06-22-12-06-15.npy  best_qlearning_table.npy  ensemble_Qlearning_table.npy  ensemble_SARSA_table.npy  penalisation_Qlearning_good.npy  q_table_2024-06-22-01-16-57.npy
strategies/: baselines.py  ml.py  rl copy.py  rl.py
utils/: analysis.ipynb  evaluate.py  features.py  load_data.py
