[tool.poetry]
name = "data"
version = "0.1.0"
description = ""
authors = ["Heratostene <25960839+CossonArthur@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lakeapi = "^0.14.0"
numpy = "1.26.4"
matplotlib = "^3.9.0"
plotly = "^5.22.0"
cufflinks = "^0.17.3"
nbformat = "^5.10.4"
sortedcontainers = "^2.4.0"
scipy = "^1.13.1"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
